# DigiCode-Finder

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.main.json  vite.config.ts
.github/workflows/: release.yml
scripts/: create-latest-json.sh
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/src/: api_server.rs  commands.rs  lib.rs  main.rs  mdns_service.rs  types.rs
src/components/: DeviceCard.tsx  Header.tsx
src/hooks/: useDevices.ts  useUpdater.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ja.json
src/main/: api-server.ts  index.ts  ipc-handlers.ts  mdns-service.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html
src/renderer/components/: DeviceCard.tsx  Header.tsx
src/renderer/hooks/: useDevices.ts
src/styles/: globals.css
