[package]
name = "digicode-helper"
version = "1.1.1"
description = "DigiCode Helper - mDNS device discovery"
authors = ["Fab Lab West Harima"]
license = "MIT"
repository = "https://github.com/fablab-westharima/DigiCode-Helper"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# mDNS (ネイティブAPI使用 - entitlement不要)
astro-dnssd = "0.3"

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Logging
log = "0.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# DNS resolution
dns-lookup = "2"
