[package]
name = "digicode-helper"
version = "1.1.4"
description = "DigiCode Helper - mDNS device discovery"
authors = ["Fab Lab West Harima"]
license = "MIT"
repository = "https://github.com/fablab-westharima/DigiCode-Helper"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# mDNS: dns-sd コマンド呼び出し方式（ライブラリ不要）
# macOS: dns-sd (標準搭載)
# Windows: dns-sd.exe (Bonjour Print Services必要)
# Linux: avahi-browse

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "set-header"] }

# Logging
log = "0.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
