[package]
name = "digicode-finder"
version = "1.5.2"
description = "DigiCode Finder - mDNS device discovery"
authors = ["Fab Lab West Harima"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/fablab-westharima/DigiCode-Finder"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# mDNS: dns-sd コマンド呼び出し方式（ライブラリ不要）
# macOS: dns-sd (標準搭載)
# Windows: dns-sd.exe (Bonjour Print Services必要)
# Linux: avahi-browse

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "set-header"] }

# HTTP client (for device health check)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Logging
log = "0.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# URL opener
open = "5"
